--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "emailjs": "^3.6.0",
     "emailjs-com": "^3.2.0",
+    "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
